kubernetes/service/ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdeploy
  labels:
    name:  webdeploy
spec:
  replicas: 2
  selector:
    matchLabels:
      server: nginx
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        server:  nginx
    spec:
      containers:
      - name: nginxcontainer
        image: nginx:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 80
      - name: server
        image: ubuntu:latest
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        command: ["/bin/bash", "-c"]
        args: 
          - sleep 300
