kubernetes/service/ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name:  websrvc
spec:
  selector:
   server:  web
  type: ClusterIP
  ports:
  - port:  31235
    targetPort:  80
